--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,20 @@
-.portada {
-    width: 100%;
-
-    .img {
-        width: 100%;
-        height: 100px;
-        object-fit: cover;
-    }
+.container {
+display: flex;
+flex-direction: row;
+justify-content: space-between;
 
 }
 
-.card {
-display: flex;
-flex-direction: row;
-width: 100%;
-gap: 5px;
-padding: 20px;
-margin: 10px;
 
 
 
-    .card-img-top{
-width: 200px;
-height: 180px;
-object-fit: cover;
+.contenedor-productos {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
     
-    }
+.producto-imagen {
+width: 200px;
+}
+
 }
